# foxess-tools

./: .gitignore  Makefile  pylintrc  pyproject.toml  setup.cfg  shell.nix
src/foxesstools/: bms_sim.py  test1.py
src/foxesstools/modbus/: __init__.py  crc16.py  msg.py  test_crc16.py
src/foxesstools/modbus/rtu/: __init__.py  socket.py
tests/: test_foxesstools.py
